# lte-lab

./: .ctxt  .gitignore  docker-compose.yml
config/: hss.yaml  mme.yaml  sgwc.yaml  sgwu.yaml
srsRAN_4G/lib/include/srsran/phy/phch/: uci_cfg.h
srsRAN_4G/lib/src/phy/fec/block/test/: block_test.c
ueransim/: CMakeLists.txt  Dockerfile
ueransim/enb/: CMakeLists.txt  enb_context.cpp  enb_context.hpp  main.cpp
ueransim/enb/config/: enb.yaml
ueransim/lib/common/: common.hpp
ueransim/lib/nas/: CMakeLists.txt  nas.hpp
ueransim/lib/rrc/: CMakeLists.txt  rrc.hpp
ueransim/lib/s1ap/: CMakeLists.txt  s1ap.hpp
ueransim/lib/utils/: CMakeLists.txt  log.hpp
ueransim/ue/: CMakeLists.txt  main.cpp  ue_context.cpp  ue_context.hpp
ueransim/ue/config/: ue.yaml
