cmake_minimum_required(VERSION 3.10)
project(UERANSIM_LTE_MINIMAL LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/lib)
add_subdirectory(lib/common)
add_subdirectory(lib/utils)
add_subdirectory(lib/s1ap)
add_subdirectory(lib/nas)
add_subdirectory(lib/rrc)
add_subdirectory(enb)
add_subdirectory(ue)
